pact-broker/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pact-broker
  labels:
    app.kubernetes.io/name: pact-broker
