pact-broker/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pact-broker
  namespace: pact-broker
  labels:
    app: pact-broker
    app.kubernetes.io/name: pact-broker
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9292
      targetPort: 9292
      protocol: TCP
  selector:
    app: pact-broker
